--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -48,4 +48,46 @@
     margin-top: 1.5rem;
 }
 
+/* Image slider caption information */
+.photo-info {
+    max-width: 500px;
+    margin: 1rem 2rem;
+    font-size: 0;
+}
 
+.photo-info span.separator {
+    margin-right: .5rem;
+}
+
+.slick-slide .photo-info {
+    opacity: 0;
+}
+
+.photo-info span, .photo-info dl {
+    font-size: 1.4rem;
+}
+
+.photo-info dt {
+    width: 125px !important;
+    text-align: left !important;
+    padding-left: 0;
+}
+
+/*.details-photo {*/
+/*    padding-left: 3px;*/
+/*    padding-right: 3px;*/
+/*}*/
+
+.slick-slide img.details-photo {
+    scale: 80% !important;
+    opacity: 80% !important;
+}
+
+.slick-slide.slick-current img.details-photo {
+    scale: 100% !important;
+    opacity: 100% !important;
+}
+
+.slick-slide.slick-current .photo-info {
+    opacity: 100% !important;
+}
