887 - Fix image photo info formatting

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -73,6 +73,10 @@
     padding-left: 0;
 }
 
+.photo-info dd {
+    width: unset !important;
+}
+
 /*.details-photo {*/
 /*    padding-left: 3px;*/
 /*    padding-right: 3px;*/
