887 - Simplified legislative act string

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -48,6 +48,10 @@
     margin-top: 1.5rem;
 }
 
+.details-authority-section {
+    margin-bottom: 1.5rem;
+}
+
 /* Image slider caption information */
 .photo-info {
     max-width: 500px;
