--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
@@ -218,44 +218,42 @@
 
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: flex; flex-flow: column; width: 100%; justify-content: space-between;">
-
             <!-- ko let: {widget: getWidgetForAlias('designation_or_protection_start_date')}-->
             <!-- ko foreach: { data: getValuesFromTiles(['legislative_act', 'responsible_government', 'designation_or_protection_start_date', 'reference_number']), as: 'values' } -->
             <dl class="dl-horizontal">
-                <div>
-                <dt>Recognition Type (fix)</dt>
-                <dd>
-                    <div data-bind="component: {
-                                            name: 'resource-instance-select-widget',
-                                            params: { value: values['legislative_act'], state: 'display_value'}
-                                        }"></div>
-                </dd>
-                </div>
-                <div>
-                    <dt>Recognition Government</dt>
-                    <dd>
-                        <div data-bind="component: {
+                <div class="details-authority-section">
+                    <div>
+                        <dt>Recognition Type</dt>
+                        <dd>
+                            <div data-bind="text: $parent.getLegislativeAct(values['legislative_act'])"></div>
+                        </dd>
+                    </div>
+                    <div>
+                        <dt>Recognition Government</dt>
+                        <dd>
+                            <div data-bind="component: {
                                             name: 'resource-instance-select-widget',
                                             params: { value: values['responsible_government'], state: 'display_value'}
                                         }"></div>
-                    </dd>
-                </div>
-                <div>
-                    <dt>Recognition Date</dt>
-                    <dd>
-                        <div data-bind="component: { name: 'datepicker-widget',
+                        </dd>
+                    </div>
+                    <div>
+                        <dt>Recognition Date</dt>
+                        <dd>
+                            <div data-bind="component: { name: 'datepicker-widget',
                                             params: { value: values['designation_or_protection_start_date'],
                                             node: widget.node,
                                             state: 'display_value' }
                                             }"></div>
-                    </dd>
-                </div>
-                <div>
-                    <dt>Reference Number</dt>
-                    <dd data-bind="component: {name: 'text-widget',
+                        </dd>
+                    </div>
+                    <div>
+                        <dt>Reference Number</dt>
+                        <dd data-bind="component: {name: 'text-widget',
                            params: {value: values['reference_number'], state: 'display_value'
                                     }
                            }"></dd>
+                    </div>
                 </div>
             </dl>
             <!-- /ko -->
