949 - Rename allowed hosts config name

--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -35,7 +35,7 @@ PYTHONUNBUFFERED=0
 TZ=PST
 ELASTICSEARCH_PREFIX=${ARCHES_PROJECT}_${APP_ENV}
 
-ALLOWED_HOSTS={{ allowed_hosts }}
+ALLOWED_HOSTS={{ arches_allowed_hosts }}
 AUTH_BYPASS_HOSTS={{ auth_bypass_hosts }}
 
 ## BCGov specific values
