949 - Add missing webpack vue config, fix force script logic, fix path to dotenv file

--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -39,9 +39,9 @@ ALLOWED_HOSTS={{ arches_allowed_hosts }}
 AUTH_BYPASS_HOSTS={{ auth_bypass_hosts }}
 
 ## BCGov specific values
-# Prefix when used behind a reverse proxy
+# Prefix when used behind a reverse proxy. Set to none if using WSGI - this is handled by FORCE_SCRIPT_NAME
 # Must end with a / but have no leading /
-BCGOV_PROXY_PREFIX={{ url_context_root }}
+BCGOV_PROXY_PREFIX=
 
 # Used by webpack for data export
 PUBLIC_SERVER_ADDRESS={{ arches_webpack_internal_url }}/${BCGOV_PROXY_PREFIX}
