--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -44,7 +44,7 @@ AUTH_BYPASS_HOSTS={{ auth_bypass_hosts }}
 BCGOV_PROXY_PREFIX=
 
 # Used by webpack for data export
-PUBLIC_SERVER_ADDRESS={{ arches_webpack_internal_url }}/${BCGOV_PROXY_PREFIX}
+PUBLIC_SERVER_ADDRESS={{ arches_webpack_internal_url }}/{{ url_context_root }}
 
 #rabbitmq
 # RABBITMQ_USER=guest
@@ -61,7 +61,7 @@ PUBLIC_SERVER_ADDRESS={{ arches_webpack_internal_url }}/${BCGOV_PROXY_PREFIX}
 
 #DJANGO KEY
 DJANGO_SECRET_KEY={{ django_key }}
-FORCE_SCRIPT_NAME={{ url_context_root }} #None for dev, /prefix/ when behind Apache
+FORCE_SCRIPT_NAME={{ force_script_name }} #None for dev, /prefix/ when behind Apache
 
 #S3 info
 S3_ENDPOINT={{ s3_endpoint }}
