--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -69,3 +69,6 @@ S3_BUCKET={{ s3_bucket }}
 S3_ACCESS_KEY_ID={{ s3_access_key_id }}
 S3_SECRET_ACCESS_KEY={{ s3_secret_access_key }}
 S3_PROXIES={{ proxy_env.https_proxy }}
+
+#Local Tileserver config
+TILESERVER_OUTBOUND_PROXY={{ proxy_env.https_proxy }}
