965 - Add IPA assessment end date 966 - Add IPA project start/end dates

--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -21,7 +21,8 @@ dl.stratigraphy > dd > div.stratigraphy-level > div
    padding-bottom: 17px;
 }
 
-.card_component.journal_or_volume_name, .card_component.other_journal_or_volume_name {
+.card_component.journal_or_volume_name, .card_component.other_journal_or_volume_name,
+.card_component.project_start_date, .card_component.project_end_date {
    display: inline-block;
    width: 49%;
    vertical-align: top;
