887 - Resource Detail tab updated with:
- Grey background on the image carousel to help with light color image edges
- Check for chronology notes if a value should be displayed

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -2,6 +2,7 @@
 @import "map_legend.css";
 @import "fontawesome/css/fontawesome.min.css";
 @import "fontawesome/css/solid.min.css";
+@import "resource_details.css";
 
 .card_component.start_year, .card_component.end_year, .card_component.dates_approximate {
     display: inline-block;
