--- a/src/bcrhp/bcrhp/templates/views/components/widgets/significant-event-widget.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/widgets/significant-event-widget.htm
@@ -2,6 +2,7 @@
 {% load i18n %}
 
 {% block display_value %}
+<div style="margin-bottom:1.4em">
 <dl class="dl-horizontal" data-bind="visible: showEvent">
     <dt data-bind="text: eventLabel"></dt>
     <dd>
@@ -51,22 +52,21 @@
     </dd>
 </dl>
 <!-- ko let: {notes: eventNotes()} -->
-	<span data-bind="component: {
-											name: notes.widgetLookup[notes.widget_id()].name,
-											params: {
-												tile: tile(),
-												node: notes.node,
-												config: notes.config,
-												label: notes.label(),
-												value: tile().data[notes.attributes.node_id()],
-												state: 'display_value',
-											}
-										}, click: function(){console.log(card);}">
-	</span>
-<dl class="dl-horizontal" data-bind="visible: showEvent">
-    <dt data-bind="text: notes.node.attributes.source.name"></dt>
-    <dd data-bind="text: value[notes.node_id()].en.value()"></dd>
-    <br /><br />
+<dl class="dl-horizontal" data-bind="visible: !!ko.unwrap(tile().data[notes.attributes.node_id()].en.value)">
+    <dt>Chronology Notes</dt>
+    <dd data-bind="component: {
+        name: notes.widgetLookup[notes.widget_id()].name,
+        params: {
+            tile: tile(),
+            node: notes.node,
+            config: notes.config,
+            label: notes.label(),
+            value: tile().data[notes.attributes.node_id()],
+            state: 'display_value',
+        }
+    }">
+    </dd>
 </dl>
 <!-- /ko -->
+</div>
 {% endblock display_value %}
