961 - Have detail help content structured for css styling

--- a/src/common/media/css/project_common.css
+++ b/src/common/media/css/project_common.css
@@ -159,6 +159,16 @@ table.bc-summary-table td {
     margin-right: 25px;
 }
 
+.card-help-panel dl dt {
+    float: left;
+    margin-right: 5px;
+}
+
+.card-help-panel dl > dl {
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
 .dl-horizontal {
     width: 100%;
 }
