923 - Fix jina2 template

--- a/src/bcrhp/dot.env.j2
+++ b/src/bcrhp/dot.env.j2
@@ -18,12 +18,12 @@ PGHOST={{ cd_database_host }}
 PGPORT={{ cd_database_port }}
 
 # HRIA database config
-HRIADB_USER: {{ hria_db.user }},
-HRIADB_PASSWORD: {{ hria_db.password }},
-HRIADB_HOST: {{ hria_db.host }},
-HRIADB_PORT: {{ hria_db.port }},
-HRIADB_SERVICE_NAME: {{ hria_db.service_name }},
-HRIADB_APPLICATION_USER: '{{ hria_db.application_user }}'
+HRIADB_USER={{ hria_db.user }}
+HRIADB_PASSWORD={{ hria_db.password }}
+HRIADB_HOST={{ hria_db.host }}
+HRIADB_PORT={{ hria_db.port }}
+HRIADB_SERVICE_NAME={{ hria_db.service_name }}
+HRIADB_APPLICATION_USER={{ hria_db.application_user }}
 
 CACHE_BACKEND={{ default_cache_backend }}
 CACHE_BACKEND_LOCATION={{ default_cache_backend_location }}
