959 - Add recognition type tooltip

--- a/src/bcrhp/bcrhp/media/css/resource_details.css
+++ b/src/bcrhp/bcrhp/media/css/resource_details.css
@@ -2,3 +2,11 @@
     position: static;
     margin-top: 0;
 }
+
+button.info-button {
+    color: #315B7D;
+    padding-left: 3px;
+    background: none;
+    border: none;
+    cursor: help;
+}
